# kreuzberg-surrealdb

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  kreuzberg-capabilities-index.md  kreuzberg-capabilities.md  kreuzberg-surrealdb-pitch.md  pyproject.toml  surrealdb-capabilities-index.md  surrealdb-capabilities.md
.github/workflows/: ci.yaml  publish.yaml
examples/: README.md  basic_ingest.py  chunk_explorer.py  incremental_ingest.py  ingest_document.py  rag_pipeline.py  search_patterns.py
src/kreuzberg_surrealdb/: __init__.py  _base.py  config.py  connector.py  exceptions.py  ingester.py  pipeline.py  schema.py
tasks/: bugs.md  feature_verification.md  final_feature_list.md  initial_feature_list.md  option4-kreuzberg-only-embedding.md  potential_features_from_indices.md  py-code-review.md  ruff-ignores.md  surrealdb-sdk-v2-v3-compat.md  v1.0.0-core-features.md  v1.0.0-feature-story.md
tasks/build_package/: build-tasks.md  infra-and-delivery.md  initial_feature_list.md
tasks/build_package/design-decisions/: architecture.md  capabilities.md  config-defaults.md  constructors.md  methods.md  schema.md
tests/: conftest.py  test_base.py  test_config.py  test_connector.py  test_ingester.py  test_integration.py  test_pipeline.py  test_schema.py
