[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kreuzberg-surrealdb"
version = "0.0.0"
description = "Kreuzberg-to-SurrealDB connector — zero-dependency RAG pipeline with local embeddings, hybrid search, and graph storage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
