[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kreuzberg_surrealdb"]

[tool.hatch.build.targets.sdist]
include = [
    "src/kreuzberg_surrealdb",
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

[project]
name = "kreuzberg-surrealdb"
version = "0.1.0"
description = "Kreuzberg-to-SurrealDB connector — zero-dependency RAG pipeline with local embeddings, hybrid search, and graph storage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Kreuzberg.dev", email = "admin@kreuzberg.dev" }]
keywords = [
    "kreuzberg",
    "surrealdb",
    "rag",
    "vector-search",
    "hybrid-search",
    "embeddings",
    "document-extraction",
    "text-extraction",
    "pdf",
    "ocr",
    "llm",
    "ai",
    "nlp",
    "document-intelligence",
    "graph-database",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
dependencies = [
    "kreuzberg>=4.4.3",
    "surrealdb>=1.0.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.14",
    "mypy>=1.19",
    "pre-commit>=4.0",
]

[project.urls]
Homepage = "https://github.com/kreuzberg-dev/kreuzberg-surrealdb"
Documentation = "https://docs.kreuzberg.dev"
Repository = "https://github.com/kreuzberg-dev/kreuzberg-surrealdb"
Issues = "https://github.com/kreuzberg-dev/kreuzberg-surrealdb/issues"
Kreuzberg = "https://github.com/kreuzberg-dev/kreuzberg"
SurrealDB = "https://surrealdb.com"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D104", "D203", "D213", "COM812", "ISC001", "ANN401", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"src/kreuzberg_surrealdb/ingester.py" = ["S608"]
"src/kreuzberg_surrealdb/schema.py" = ["S608"]
"tests/**" = ["S101", "S105", "S106", "S108", "S608", "D", "ANN", "SLF001", "PLR2004", "PLC0415", "PERF401", "PERF402", "TC001", "TC003"]
"examples/**" = ["INP001", "D", "ANN", "T201", "S106", "ASYNC240", "ASYNC250", "PLR2004", "PLC0415", "RET504"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: tests requiring a live SurrealDB instance (no mocks, slower)"]

[tool.coverage.run]
source = ["kreuzberg_surrealdb"]

[tool.coverage.report]
fail_under = 80
